# leapfrogai-backend-vllm

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile-vllm  Makefile  README.md  config.example.yaml  main.py  model.py  overrides.txt  pyproject.toml  requirements-dev.txt  requirements-vllm.txt  requirements.txt  zarf-config.yaml  zarf.yaml
.github/workflows/: release.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: configmap-api.yaml  configmap-backend.yaml  deployment.yaml  service.yaml
configs/: config.example.yaml
manifests/: configmap.yaml
patches/: deployment.yaml
scripts/: model_download.py
src/: config.py  main.py  model_download.py
