[project]
name = "leapfrogai-backend-vllm"
version = "0.0.1"
description = "LeapfrogAI backend for VLLM"
authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
license = { file = "LICENSE" }
readme = "README.md"

requires-python = ">=3.11.6, <3.12"

dependencies = [
    "vllm==0.3.1",
    "opentelemetry-api==1.19.0",
    "opentelemetry-exporter-otlp-proto-common==1.19.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.19.0",
    "opentelemetry-instrumentation==0.40b0",
    "opentelemetry-instrumentation-grpc==0.40b0",
    "opentelemetry-proto==1.19.0",
    "opentelemetry-sdk==1.19.0",
    "opentelemetry-semantic-conventions==0.40b0",
    "prometheus-client==0.17.1",
    "leapfrogai==0.4.0",
]

[project.optional-dependencies]
dev = [
    "uv"
]