[project]
name = "leapfrogai-backend-vllm"
version = "0.0.1"
description = "LeapfrogAI backend for VLLM"
authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
license = { file = "LICENSE" }
readme = "README.md"

requires-python = ">=3.11.4, <3.12"

dependencies = [
    "vllm==0.3.1",
    "setuptools==69.1.0",
    "leapfrogai==0.4.0"
]

[project.optional-dependencies]
dev = [
    "uv",
    "nvidia-cublas-cu12 == 12.1.3.1",
    "nvidia-cuda-runtime-cu12 == 12.1.105",
]
gpu = ["nvidia-cublas-cu12 == 12.1.3.1", "nvidia-cuda-runtime-cu12 == 12.1.105"]

[tool.pip-tools]
generate-hashes = true