[project]
name = "leapfrogai-backend-vllm"
version = "0.0.1"
description = "LeapfrogAI backend for VLLM"
authors = [{ name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" }]
license = { file = "LICENSE" }
readme = "README.md"

requires-python = "==3.11.6"

dependencies = [
    "uv>=0.1.7",
    "vllm==0.3.2",
    "setuptools>=69.1.0",
    "leapfrogai==0.4.0",
    "python-dotenv>=1.0.1",
    "aiostream>=0.5.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.1",
    "nvidia-cublas-cu12 == 12.1.3.1",
    "nvidia-cuda-runtime-cu12 == 12.1.105",
]